@@ -11,22 +11,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.96.tar.gz 37846686 RMD160 d980f7f8ec6c646a9b741718284b081987f9d73c SHA1 e2942bdbf693a0814fcc3b34d5ae55765d5d4ad8 SHA256 a9fa904e00e09d8b68e701edda208bd274053d26d0b50d97d6c977084e5c307d
-EBUILD emacs-cvs-22.0.96.ebuild 7349 RMD160 98b4df42a842e26cff0b0ead5b287f6574d6a4b2 SHA1 8e3641a4c65ab57f1014ba9db871f96548b9faee SHA256 7b3cfccacdc3080c75253a665bb19e121af7ef7eb2eaa1e16972fd402148a1f4
-MD5 14cde4a3b1c65d035d9ec0e17b6436a9 emacs-cvs-22.0.96.ebuild 7349
-RMD160 98b4df42a842e26cff0b0ead5b287f6574d6a4b2 emacs-cvs-22.0.96.ebuild 7349
-SHA256 7b3cfccacdc3080c75253a665bb19e121af7ef7eb2eaa1e16972fd402148a1f4 emacs-cvs-22.0.96.ebuild 7349
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 7637 RMD160 9b0abb0088183112f87b9e55d7426eb3e21cbb38 SHA1 37e4b7bbe3ffb3c83897417e2eeeb4694a8cc617 SHA256 efaa4b862748bdc74c8e3d55604113108d787c566ab03ec35f495eab2f7500b7
-MD5 8b38de8cb9e69ead6fa4af60ac0be3d6 emacs-cvs-22.0.9999-r8.ebuild 7637
-RMD160 9b0abb0088183112f87b9e55d7426eb3e21cbb38 emacs-cvs-22.0.9999-r8.ebuild 7637
-SHA256 efaa4b862748bdc74c8e3d55604113108d787c566ab03ec35f495eab2f7500b7 emacs-cvs-22.0.9999-r8.ebuild 7637
-EBUILD emacs-cvs-23.0.0-r4.ebuild 7895 RMD160 67b30237b7cb56bdee11d3fb889fd975139cf1c1 SHA1 d3f857e4e009a14b1c4ba334382e26dbbeac1ba9 SHA256 ac8648e52ffe716dde80a34a59c98edd179d22627dd78ebf28e585a08647061b
-MD5 7fe865901e0c16f86a46e73b369f8fa5 emacs-cvs-23.0.0-r4.ebuild 7895
-RMD160 67b30237b7cb56bdee11d3fb889fd975139cf1c1 emacs-cvs-23.0.0-r4.ebuild 7895
-SHA256 ac8648e52ffe716dde80a34a59c98edd179d22627dd78ebf28e585a08647061b emacs-cvs-23.0.0-r4.ebuild 7895
-MISC ChangeLog 7516 RMD160 a3796e9207352dfe29ccc7658759df8600bfc1a5 SHA1 870a778c0cbb23a27e149d7aeaa6280015cd862c SHA256 28648a5e0908501059f8cfec10713779c61f72a2f3ebc4a0e35594f835ddf912
-MD5 125a3177b5d5e221f2d7d4c3d081832c ChangeLog 7516
-RMD160 a3796e9207352dfe29ccc7658759df8600bfc1a5 ChangeLog 7516
-SHA256 28648a5e0908501059f8cfec10713779c61f72a2f3ebc4a0e35594f835ddf912 ChangeLog 7516
+EBUILD emacs-cvs-22.0.96.ebuild 7365 RMD160 a805abf46e598c178259ec97db6b655ad4e0370b SHA1 7d84fe5571a5ac3bd5349b9a6a29a06c8d87e1d0 SHA256 fb5fa61187629d721746de1f1b440ccaf5e9e45bd255d8bcafc1766c45d79021
+MD5 1cdc346ee02af7b06e66a9bb7ecba5a0 emacs-cvs-22.0.96.ebuild 7365
+RMD160 a805abf46e598c178259ec97db6b655ad4e0370b emacs-cvs-22.0.96.ebuild 7365
+SHA256 fb5fa61187629d721746de1f1b440ccaf5e9e45bd255d8bcafc1766c45d79021 emacs-cvs-22.0.96.ebuild 7365
+EBUILD emacs-cvs-22.0.9999-r8.ebuild 7640 RMD160 25fc6d18987d792329a3c0fd35745d79186c0736 SHA1 864e6d84604191946da95e117a68f1cebd3c7936 SHA256 209fcc9f739e77b81a30654c5e0848d59ff4ab5602016cf0fac527be83c96d7d
+MD5 2b31c85ede519f9b447e05cdd75eb51a emacs-cvs-22.0.9999-r8.ebuild 7640
+RMD160 25fc6d18987d792329a3c0fd35745d79186c0736 emacs-cvs-22.0.9999-r8.ebuild 7640
+SHA256 209fcc9f739e77b81a30654c5e0848d59ff4ab5602016cf0fac527be83c96d7d emacs-cvs-22.0.9999-r8.ebuild 7640
+EBUILD emacs-cvs-23.0.0-r4.ebuild 7941 RMD160 a4e387ed9034c5a61f1f27e755b6634920a187ef SHA1 c0864dd3bc303f480f9553255436c6ad33526464 SHA256 cafd10507bc57afd6117b4ffa9ac33e58163c1bdee169f57ce8d9e1d59976a46
+MD5 54aa57495f375a0755327776baa5578e emacs-cvs-23.0.0-r4.ebuild 7941
+RMD160 a4e387ed9034c5a61f1f27e755b6634920a187ef emacs-cvs-23.0.0-r4.ebuild 7941
+SHA256 cafd10507bc57afd6117b4ffa9ac33e58163c1bdee169f57ce8d9e1d59976a46 emacs-cvs-23.0.0-r4.ebuild 7941
+MISC ChangeLog 7714 RMD160 116394b41c50ea8e00337177de647f8dcd5e6dab SHA1 1fdde08455bca76bb9d033bf9541a1e6bdf21fa4 SHA256 40489ed6679c4a7ddb0d0fc281a279d9f1a5d9ac0b9db374e5fab4c740b62672
+MD5 6126b9eed6b90ff6f02b508a70c89f97 ChangeLog 7714
+RMD160 116394b41c50ea8e00337177de647f8dcd5e6dab ChangeLog 7714
+SHA256 40489ed6679c4a7ddb0d0fc281a279d9f1a5d9ac0b9db374e5fab4c740b62672 ChangeLog 7714
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
